--- a/src/css/styles1.css
+++ b/src/css/styles1.css
@@ -10,6 +10,16 @@
 	margin-top: 0;
 	margin-bottom: 1em;
 }
+.selectionTab {
+	background-color: #3a4142;
+	display: flex;
+	overflow: hidden;
+	justify-content: flex-start;
+	align-items: center;
+	display: flex;
+	margin-top: 0;
+	margin-bottom: 1em;
+}
 
 .navbar a {
 	float: left;
@@ -58,8 +68,8 @@ html {
 }
 
 .wrapper {
-	width: 450px;
-	margin: 0 auto;
+	width: 70%;
+	margin: 5px;
 	margin-bottom: 20px;
 }
 
@@ -71,9 +81,21 @@ html {
 	color: #25e0ea;
 	text-shadow: 1px 1px 3px #000;
 	background-color: #3a4142;
-	border-bottom: 1px solid #657275;
+	border-bottom: 5px solid white;
 	
 }
+.box1 {
+	padding: 1px 0 1px 0;
+	text-align: center;
+	border-radius: 10px 10px 0 0;
+	margin-top: 50px;
+	color: #25e0ea;
+	text-shadow: 1px 1px 3px #000;
+	background-color: #3a4142;
+	border-bottom: 5px solid white;
+	
+}
+
 .main {
 	background-color: #3a4142;
 	color: #25e0ea;
@@ -215,4 +237,3 @@ ul li.editMode label {
 li > .edit:hover {
 	color: #1900ff;
 }
-
