--- a/src/css/indexstyles.css
+++ b/src/css/indexstyles.css
@@ -63,12 +63,12 @@
 
 body,
 html {
-	background-color: grey;
+	background-color: #25e0ea;
 	font-family: "Open Sans", sans-serif;
 }
 
 .wrapper {
-	width: 25%;
+	width: 70%;
 	margin: 5px;
 	margin-bottom: 20px;
 }
