--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
 .navbar {
 	background-color: #3a4142;
 	display: flex;
@@ -25,7 +27,7 @@
 }
 
 .base {
-	background-color: wheat;
+	background-color: rgb(215, 215, 215);
 	padding: auto;
 	display: flex;
 	align-items: center;
@@ -49,11 +51,9 @@
 	font-size: 5em;
 }
 
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
-
 body,
 html {
-	background-color: #c6d7b1;
+	background-color: #888;
 	font-family: "Open Sans", sans-serif;
 }
 
@@ -68,36 +68,32 @@ html {
 	text-align: center;
 	border-radius: 10px 10px 0 0;
 	margin-top: 50px;
-	color: #eaedc2;
-	text-shadow: 1px 1px 3px #000;
-	background-color: #828b6c;
-}
-.box1 {
-	padding: 1px 0 1px 0;
-	text-align: center;
-	border-radius: 10px 10px 0 0;
-	margin-top: 50px;
 	color: #25e0ea;
 	text-shadow: 1px 1px 3px #000;
 	background-color: #3a4142;
-	border-bottom: 5px solid white;
+	border-bottom: 1px solid #657275;
 	
 }
 .main {
-	background-color: #f5f5f5;
-	color: #828b6c;
+	background-color: #3a4142;
+	color: #25e0ea;
 	padding: 1px 5px 10px 10px;
 }
 
+textarea {
+	resize: none;
+}
+
 button {
-	background: none;
+	background: #55bfe0;
 	border: 0px;
-	color: #888;
+	color: #3a4142;
 	font-size: 15px;
 	width: 60px;
 	margin: 10px 0 0;
 	font-family: Lato, sans-serif;
 	cursor: pointer;
+	margin-right: .5em;
 }
 
 ul {
@@ -114,12 +110,17 @@ ul {
 }
 
 #createtask {
-	background-color: #828b6c;
+	background-color: #4baac7;
 	padding: 5px;
 	width: 231px;
-	color: #eaedc2;
+	color: #3a4142;
 	text-align: center;
 	cursor: pointer;
+	margin-top: 1em;
+}
+
+#createtask:hover {
+	color: #1900ff;
 }
 
 li * {
@@ -170,7 +171,7 @@ input#new-task {
 	width: 318px;
 }
 p > button:hover {
-	color: #0fc57c;
+	color: #1900ff;
 }
 
 li {
@@ -193,7 +194,7 @@ li > input[type="text"] {
 	width: 226px;
 }
 li > .delete:hover {
-	color: #cf2323;
+	color: #ff0000;
 }
 
 /* Completed */
@@ -213,4 +214,8 @@ ul li.editMode input[type="text"] {
 
 ul li.editMode label {
 	display: none;
+}
+
+li > .edit:hover {
+	color: #1900ff;
 }
