css adjustments to fit theme

--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -58,7 +58,7 @@ html {
 }
 
 .wrapper {
-	width:550px;
+	width:450px;
 	margin: 0 auto;
 	margin-bottom: 20px;
 }
@@ -83,13 +83,17 @@ html {
 button {
 	background: #55bfe0;
 	border: 0px;
+	border-radius: 5%;
 	color: #3a4142;
-	font-size: 15px;
+	font-size: 30px;
 	width: 60px;
 	margin: 10px 0 0;
 	font-family: Lato, sans-serif;
 	cursor: pointer;
 	margin-right: .5em;
+	text-align: center;
+	height: 25px;
+
 }
 
 ul {
@@ -130,6 +134,7 @@ h3 {
 input,
 button {
 	outline: none;
+	text-align: center;
 }
 
 label[for="new-task"] {
@@ -218,15 +223,15 @@ li > .edit:hover {
 
 .collapsible {
     background-color: #777;
-    color: white;
+    color: lightgrey;
     cursor: pointer;
-    padding: 18px;
+    /* padding: 18px; */
     width: 5%;
     border: none;
     text-align: center;
     float: right;
     outline: none;
-    font-size: 15px;
+    font-size: 20px;
   }
   
   .active, .collapsible:hover {
@@ -240,6 +245,10 @@ li > .edit:hover {
     background-color: lightgrey;
     float: right;
     width: 40%;
+  }
+  .blacktext {
+	  color: black;
+	  text-decoration: underline;
   }
 
   #tempname {
