--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -60,11 +60,10 @@ html {
 .createtaskbtn {
 	justify-self: center;
 	align-items: center;
-	padding: 2em 17em 2em 10em;
-	display: inline-flex;
 	flex-wrap: wrap;
 	flex-direction: column;
-	display: block;
+	float: inline-start;
+	padding: 0 6.5em 0 2em;
 }
 
 .wrapper {
@@ -87,6 +86,8 @@ html {
 	background-color: #3a4142;
 	color: #25e0ea;
 	padding: 1px 5px 10px 10px;
+	justify-content: center;
+	align-items: center;
 }
 
 button {
