--- a/src/css/indexStyles.css
+++ b/src/css/indexStyles.css
@@ -72,10 +72,11 @@ html {
 
 
 .wrapper {
-	width: 325px;
-	margin: 20px;
-	margin-bottom: 20px;
-	overflow: auto;
+	width: 315px;
+	margin: 15px;
+	margin-bottom: 15px;
+	/* overflow-x: visible;
+	overflow-y: auto; */
 }
 #taskCard{
 	float: left
@@ -89,17 +90,15 @@ html {
 #noteCard{
 	float: left;
 }
-
 #title{
 font-size: medium;
 font-weight: bold;
 }
 
-
 .box {
 	padding: 1px 0 1px 0;
 	text-align: center;
-	border-radius: 10px 10px 0 0;
+	border-radius: 5px 5px 0 0;
 	margin-top: 50px;
 	color: #25e0ea;
 	text-shadow: 1px 1px 3px #000;
@@ -110,7 +109,27 @@ font-weight: bold;
 .main {
 	background-color: #3a4142;
 	color: #25e0ea;
-	padding: 1px 5px 10px 10px;
+	padding: 1px 5px 5px 5px;
+}
+
+h1 {
+    display: block;
+    font-size: 35px;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+h2 {
+    display: block;
+    font-size: 26px;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
 }
 
 button {
@@ -155,10 +174,7 @@ ul {
 li * {
 	float: left;
 }
-li,
-
-input,
-button {
+li, input, button {
 	outline: none;
 }
 
@@ -245,3 +261,35 @@ ul li.editMode label {
 li > .edit:hover {
 	color: #1900ff;
 }
+
+
+/* stuff for proj card */
+.collapsible {
+    background-color: #777;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 5%;
+    border: none;
+    text-align: center;
+    float: right;
+    outline: none;
+    font-size: 15px;
+  }
+  
+  .active, .collapsible:hover {
+    background-color: #55bfe0;
+  }
+  
+  .content {
+    padding: 18px;
+    display: none;
+    overflow: hidden;
+	color: black;
+    background-color: grey;
+
+    float: right;
+    width: 40%;
+  }
+
+  /*proj card stuff end*/
