--- a/src/css/indexStyles.css
+++ b/src/css/indexStyles.css
@@ -53,7 +53,7 @@
 
 body,
 html {
-	background-color: #a8a8a8;
+	background-color: #888;
 	font-family: "Open Sans", sans-serif;
 }
 
@@ -293,3 +293,9 @@ li > .edit:hover {
   }
 
   /*proj card stuff end*/
+
+  /* Getting rid of underline */
+  a {
+	text-decoration: none;
+	color: black;
+}
