--- a/src/css/indexStyles.css
+++ b/src/css/indexStyles.css
@@ -104,6 +104,9 @@ font-weight: bold;
 	border-bottom: 1px solid #657275;
 	
 }
+.sectionLinks{
+	color:#25e0ea ;
+}
 .main {
 	background-color: #3a4142;
 	color: #25e0ea;
