--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -13,7 +13,7 @@
 
 .navbar a {
 	float: left;
-	color: #55bfe0;
+	color: #29d6df;
 	text-align: center;
 	padding: 14px 14px;
 	font-size: 17px;
@@ -22,7 +22,7 @@
 }
 
 .navbar a.active {
-	background-color: #4baac7;
+	background-color: #29d6df;
 	color: #3a4142;
 }
 
@@ -81,7 +81,7 @@ html {
 }
 
 button {
-	background: #55bfe0;
+	background: #29d6df;
 	border: 0px;
 	color: #3a4142;
 	font-size: 15px;
@@ -106,7 +106,7 @@ ul {
 }
 
 #createtask {
-	background-color: #4baac7;
+	background-color: #29d6df;
 	padding: 5px;
 	width: 231px;
 	color: #3a4142;
