--- a/src/css/indexStyles.css
+++ b/src/css/indexStyles.css
@@ -134,13 +134,16 @@ h2 {
 }
 
 button {
-	background: #55bfe0;
+	background: #29d6df;
 	border: 0px;
 	color: #3a4142;
-	font-size: 15px;
+	font-size: 50px;
+	text-align: center;
 	width: 60px;
-	margin: 10px 0 0;
+	height: 40px;
+	/* margin: 10px 0 0; */
 	font-family: Lato, sans-serif;
+	font-weight: bold;
 	cursor: pointer;
 	margin-right: .5em;
 }
